--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,18 @@
   "description": "Fantasy Football Draft Tool Frontend",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
-    "axios": "^1.4.0",
-    "lucide-react": "^0.263.1",
-    "tailwindcss": "^3.3.0",
-    "@headlessui/react": "^1.7.15",
-    "clsx": "^1.2.1"
+    "tailwindcss": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
