feat: comprehensive documentation overhaul and release preparation
- Consolidate and reorganize all README files for better user experience
- Update main README.md with GitHub release section and modern formatting
- Rename INTEGRATED_SYSTEM_README.md to TECHNICAL_DOCUMENTATION.md for clarity
- Create DOCUMENTATION_INDEX.md for easy navigation across all docs
- Fix all port references from 5000 to 5001 for consistency
- Add comprehensive release package with start scripts for Windows/Mac/Linux
- Implement custom rankings upload and mock draft configuration features
- Add dependency checkers and automated build scripts
- Update all documentation timestamps and cross-references
- Prepare complete release-ready package structure

BREAKING CHANGE: Port configuration now consistently uses 5001 across all components

Closes: Documentation consolidation and release preparation tasks

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,24 @@
-Flask==2.3.2
+# Fantasy Football Draft Assistant - Python Dependencies
+# Core web framework
+Flask==2.3.3
 Flask-CORS==4.0.0
-requests==2.31.0
+
+# Data processing
 pandas==2.0.3
-beautifulsoup4==4.12.2
+numpy==1.24.3
+
+# HTTP requests
+requests==2.31.0
+
+# File handling
+Werkzeug==2.3.7
+
+# Date/time handling
+python-dateutil==2.8.2
+
+# CSV processing (included with pandas)
+# Additional utilities that might be needed
+six==1.16.0
+
+# Optional: For better performance
+# gunicorn==21.2.0  # Uncomment for production deployment
