feat: add desktop application framework and improve gitignore
🖥️ Desktop Application Framework:
- Added complete Electron app structure for cross-platform desktop apps
- Created main.js with proper backend/frontend integration
- Added build configuration for Windows/Mac/Linux installers
- Fixed React Router compatibility (downgraded to v6.14.0)

📝 Updated .gitignore:
- Added Electron build artifacts (dist/, node_modules/)
- Added release packages (*.exe, *.dmg, *.AppImage)
- Added frontend build outputs (build/, dist/)
- Added runtime configuration files
- Excluded all generated/build files from version control

🔧 Technical Implementation:
- Electron main process manages Python Flask subprocess
- Express server serves built React app locally
- Cross-platform build targets with electron-builder
- Professional installer configurations (NSIS, DMG, AppImage)

This provides the foundation for creating native desktop applications
while keeping the repository clean of build artifacts and generated files.
Users will be able to download and install with one click across all platforms.

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,26 @@ backend/node_modules/
 # Build outputs
 frontend/build/
 frontend/dist/
+src/frontend/build/
+src/frontend/dist/
 *.pyc
 __pycache__/
+
+# Electron app build artifacts
+electron-app/node_modules/
+electron-app/dist/
+electron-app/frontend/
+electron-app/backend/
+electron-app/package-lock.json
+
+# Release packages
+FantasyFootballDraftAssistant-*.zip
+FantasyFootballDraftAssistant-*-Desktop-Apps/
+*.exe
+*.dmg
+*.AppImage
+*.deb
+*.rpm
 
 # Logs
 logs/
@@ -20,6 +38,7 @@ backend/logs/
 *.log
 backend.log
 frontend.log
+server.log
 
 # Environment files
 .env
@@ -41,11 +60,17 @@ PopulatedFromSites/
 Rankings/PopulatedFromSites/
 Rankings_backup.csv
 
+# Runtime configuration files
+backend/current_rankings_selection.json
+backend/manual_rankings_override.json
+src/backend/current_rankings_selection.json
+src/backend/manual_rankings_override.json
+
 # Documentation (keep main README)
 ADVANCED_RANKINGS.md
 BUILD_EXE.bat
 DISTRIBUTION_GUIDE.md
-FANTASYPROS_SCRAPER.md
+FANTASYPROSPROS_SCRAPER.md
 HOW_TO_BUILD_EXE.md
 INTEGRATED_SYSTEM_README.md
 REACT_FRONTEND.md
@@ -54,3 +79,11 @@ FantasyDraftAssistant.spec
 # Temporary files
 *.tmp
 *.temp
+
+# Python build artifacts
+build/
+dist/
+*.egg-info/
+
+# Package lock files (keep main ones, ignore copies)
+electron-app/package-lock.json
