feat(frontend): add local HTTP server for connecting to user's localhost backend
- Configure production to connect to localhost:5001 (user's local backend)
- Add serve-local.js HTTP server to avoid HTTPS->HTTP mixed content issues
- Add npm scripts: 'serve' and 'build-and-serve' for easy deployment
- Add comprehensive DEPLOYMENT.md with user instructions
- Install express as dev dependency for local server
- Solves browser security restrictions when connecting to localhost from remote domains

--- a/src/frontend/.env.production
+++ b/src/frontend/.env.production
@@ -1,9 +1,3 @@
-# Production API URL - This should point to your deployed backend
-# TODO: Replace with your actual backend deployment URL
-# Examples:
-# REACT_APP_API_URL=https://your-app.herokuapp.com
-# REACT_APP_API_URL=https://your-app.railway.app
-# REACT_APP_API_URL=https://your-backend.render.com
-
-# For now, this will cause CORS issues but shows where the problem is
-REACT_APP_API_URL=https://your-backend-needs-to-be-deployed.com
+# Production API URL - Connect to user's local backend
+# This assumes users are running the backend locally on port 5001
+REACT_APP_API_URL=http://localhost:5001
